[package]
name = "whisper"
version = "0.1.0"
authors = ["Sean Leffler <sean@errno.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.17.2"
string_cache = "0.8.0"
im = "14.2.0"
roaring = "0.6.0"
smallvec = { version = "1.1.0", features = ["serde"] }
supercow = "0.1.0"
regex = "1.3.3"
failure = "0.1.6"
itertools = "0.8.2"
whisper_derive = { path = "../whisper_derive" }
derive_more = "0.99.2"
derive-new = "0.5.8"
bincode = "1.2.1"
serde = "1.0.104"
by_address = "1.0.4"
num-integer = "0.1.42"
lazy_static = "1.4.0"
whisper_ir = { path = "../whisper_ir" }
whisper_schema = { path = "../whisper_schema" }
egress = { path = "../egress" }

[build-dependencies]
lalrpop = "0.17.2"
