[package]
name = "whisper_codegen"
version = "0.1.0"
authors = ["Sean Leffler <sean@errno.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string_cache_codegen = "0.5.1"
proc-macro2 = "1.0.8"
quote = "1.0.2"
syn = "1.0.14"
