[package]
name = "whisper_ir"
version = "0.1.0"
authors = ["Sean Leffler <sean@errno.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whisper_codegen = { path = "../whisper_codegen" }
lalrpop-util = "0.17.2"
lazy_static = "1.4.0"
regex = "1.3.4"
serde = "1.0.104"
smallvec = "1.2.0"
im = "14.2.0"
num-integer = "0.1.42"
derive-new = "0.5.8"
bincode = "1.2.1"
by_address = "1.0.4"
failure = "0.1.6"
derive_more = "0.99.2"
string_cache = "0.8.0"
syn = { version = "1.0.14", features = ["derive", "full", "parsing", "printing", "clone-impls", "proc-macro"] } 
quote = "1.0.2"
proc-macro2 = "1.0.8"
codemap = "0.1.2"
codemap-diagnostic = "0.1.1"
ordered-float = "1.0.2"
serde_json = "1.0.47"

[build-dependencies]
lalrpop = "0.17.2"

[dev-dependencies]
whisper_derive = { path = "../whisper_derive" }
whisper = { path = "../whisper" }
egress = { path = "../egress" }
